@@ -53,7 +53,7 @@ import java.util.NoSuchElementException;
  *
  * @author bradtaylor
  */
-public class SamRecordTrackingBuffer<T extends SamRecordWithOrdinal> {
+public class SamRecordTrackingBuffer<T extends SamRecordWithOrdinal> implements AutoCloseable {
     private int availableRecordsInMemory; // how many more records can we store in memory
     private final int blockSize; // the size of each block
     private final List<Path> tmpDirs; // the list of temporary directories to use
@@ -82,7 +82,7 @@ public class SamRecordTrackingBuffer<T extends SamRecordWithOrdinal> {
         this.tmpDirs = tmpDirs;
         this.queueHeadRecordIndex = -1;
         this.queueTailRecordIndex = -1;
-        this.blocks = new ArrayDeque<BufferBlock>();
+        this.blocks = new ArrayDeque<>();
         this.header = header;
         this.clazz = clazz;
     }
@@ -203,6 +203,7 @@ public class SamRecordTrackingBuffer<T extends SamRecordWithOrdinal> {
     /**
      * Close IO resources associated with each underlying BufferBlock
      */
+    @Override
     public void close() {
         while (!blocks.isEmpty()) {
             final BufferBlock block = blocks.pollFirst();
@@ -213,7 +214,7 @@ public class SamRecordTrackingBuffer<T extends SamRecordWithOrdinal> {
     /**
      * This stores blocks of records, either in memory or on disk, or both!
      */
-    private class BufferBlock {
+    private class BufferBlock implements AutoCloseable {
         private final DiskBackedQueue<SAMRecord> recordsQueue;
         private final int maxBlockSize;
         private long currentStartIndex;
@@ -287,7 +288,7 @@ public class SamRecordTrackingBuffer<T extends SamRecordWithOrdinal> {
             }
         }
 
-        private int ensureIndexFitsInAnInt(final long value) {
+        private static int ensureIndexFitsInAnInt(final long value) {
             if (value < Integer.MIN_VALUE || Integer.MAX_VALUE < value)
                 throw new SAMException("Error: index out of range: " + value);
             return (int) value;
@@ -325,7 +326,8 @@ public class SamRecordTrackingBuffer<T extends SamRecordWithOrdinal> {
                 try {
                     // create a wrapped record for the head of the queue, and set the underlying record's examined
                     // information appropriately
-                    final SamRecordWithOrdinal samRecordWithOrdinal = clazz.newInstance();
+                    final SamRecordWithOrdinal samRecordWithOrdinal =
+                            clazz.getDeclaredConstructor().newInstance();
                     samRecordWithOrdinal.setRecord(this.recordsQueue.poll());
                     samRecordWithOrdinal.setRecordOrdinal(this.currentStartIndex);
                     samRecordWithOrdinal.setResultState(this.resultStateIndexes.get(
@@ -359,7 +361,16 @@ public class SamRecordTrackingBuffer<T extends SamRecordWithOrdinal> {
          * This must be called when a block is no longer needed in order to prevent memory leaks.
          */
         public void clear() {
-            this.recordsQueue.clear();
+            this.recordsQueue.close();
+        }
+
+        /**
+         * Close disk IO resources associated with the underlying records queue.
+         * This must be called when a block is no longer needed in order to prevent memory leaks.
+         */
+        @Override
+        public void close() {
+            clear();
         }
     }
 }
